<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".Popes">

    <ImageView
        android:id="@+id/uci_image"
        android:layout_width="100dp"
        android:layout_height="180dp"
        android:layout_marginStart="276dp"
        android:layout_marginTop="1dp"
        android:src="@drawable/ucicinemas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popes_title"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.202" />

    <ImageView
        android:layout_width="166dp"
        android:layout_height="230dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="204dp"
        android:contentDescription="@string/todo_popes"
        android:src="@drawable/popes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/PopesExorcist"
        android:layout_width="402dp"
        android:layout_height="130dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="436dp"
        android:text="@string/popes_desc"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/PopesExorcist_2"
        android:layout_width="233dp"
        android:layout_height="236dp"
        android:layout_marginStart="192dp"
        android:layout_marginTop="196dp"
        android:text="@string/Popes_det"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/popes_bt1"
        android:layout_width="72dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="640dp"
        android:text="@string/plus"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/popes_bt2"
        android:layout_width="72dp"
        android:layout_height="50dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="640dp"
        android:text="@string/minus"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <ImageView
        android:id="@+id/popes_seats"
        android:layout_width="100dp"
        android:layout_height="180dp"
        android:layout_marginStart="276dp"
        android:layout_marginTop="476dp"
        android:src="@drawable/seats"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/popes_ticket"
        android:layout_width="100dp"
        android:layout_height="180dp"
        android:layout_marginTop="532dp"
        android:paddingTop="20sp"
        android:text="@string/ticket_qt"
        android:textAlignment="center"
        android:textColor="@color/purple_500"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="80dp" />

    <TextView
        android:id="@+id/popes_remain"
        android:layout_width="100dp"
        android:layout_height="180dp"
        android:layout_marginTop="492dp"
        android:paddingTop="20sp"
        android:text="@string/ticket_rem"
        android:textAlignment="center"
        android:textColor="@color/purple_500"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="276dp" />


</androidx.constraintlayout.widget.ConstraintLayout>
