<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".Creed3">

    <ImageView
        android:id="@+id/uci_image"
        android:layout_width="100dp"
        android:layout_height="180dp"
        android:layout_marginStart="264dp"
        android:layout_marginTop="1dp"
        android:src="@drawable/ucicinemas"
        app:layout_constraintBottom_toTopOf="@+id/creed_3_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/creed_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/creed_iii"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.116"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.081" />

    <ImageView
        android:id="@+id/creed3"
        android:layout_width="166dp"
        android:layout_height="230dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="108dp"
        android:src="@drawable/creed3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/creed__3"
        android:layout_width="402dp"
        android:layout_height="130dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="348dp"
        android:text="@string/creed_des"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/creed_3_1"
        android:layout_width="215dp"
        android:layout_height="232dp"
        android:layout_marginStart="180dp"
        android:layout_marginTop="108dp"
        android:text="@string/creed_detl"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/creed_bt1"
        android:layout_width="72dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="568dp"
        android:text="@string/plus_creed"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/creed_bt2"
        android:layout_width="72dp"
        android:layout_height="50dp"
        android:layout_marginStart="168dp"
        android:layout_marginTop="568dp"
        android:text="@string/minus_creed"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <ImageView
        android:id="@+id/creed_seats"
        android:layout_width="100dp"
        android:layout_height="180dp"
        android:layout_marginStart="276dp"
        android:layout_marginTop="476dp"
        android:src="@drawable/seats"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/creed_ticket"
        android:layout_width="100dp"
        android:layout_height="180dp"
        android:layout_marginTop="532dp"
        android:paddingTop="20sp"
        android:text="@string/ticket_qt"
        android:textAlignment="center"
        android:textColor="@color/purple_500"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="80dp" />

    <TextView
        android:id="@+id/creed_remain"
        android:layout_width="100dp"
        android:layout_height="180dp"
        android:layout_marginTop="492dp"
        android:paddingTop="20sp"
        android:text="@string/ticket_rem"
        android:textAlignment="center"
        android:textColor="@color/purple_500"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="276dp" />


</androidx.constraintlayout.widget.ConstraintLayout>
